@@ -24,6 +24,7 @@ class Attachment < ActiveRecord::Base
   validates_presence_of :filename, :author
   validates_length_of :filename, :maximum => 255
   validates_length_of :disk_filename, :maximum => 255
+  validates_length_of :description, :maximum => 255, :allow_blank => true
   validate :validate_max_file_size
 
   acts_as_event :title => :filename,
